# swift-cmark

./: CMakeLists.txt  Makefile  Package.swift  README.md
.github/workflows/: UpstreamSync.yml
api_test/: CMakeLists.txt  harness.c  main.c
extensions/: CMakeLists.txt  core-extensions.c  spoiler.c  spoiler.h  superscript.c  superscript.h  table.c
extensions/include/: cmark-gfm-core-extensions.h  cmark-gfm-extensions_export.h  extensions-export.h
man/: CMakeLists.txt
src/: CMakeLists.txt  arena.c  blocks.c  buffer.c  cmarkConfig.cmake.in  commonmark.c  config.h.in  inlines.c  latex.c  node.c  plaintext.c  render.c  xml.c
src/include/: cmark-gfm.h  cmark-gfm_config.h  cmark-gfm_export.h  export.h  houdini.h  inlines.h  module.modulemap  mutex.h  node.h
test/: CMakeLists.txt  extensions.txt  pathological_tests.py  spec.txt
